@@ -2,6 +2,12 @@
 CHANGE LOG
 =========================================================================
 
+2010-02-16 Jason Vertrees <Jason.Vertrees@schrodinger.com>
+
+	* movie_quality setting
+
+	* copyright notices and install paths
+
 2009-06-14 Warren L. DeLano <warren@delsci.com>	
 
 	* motions 
